# QtSocketProgramming

./: README.md
Client talks to server/SimpleQtClient/: CMakeLists.txt  client.cpp  client.h  main.cpp
Client talks to server/SimpleQtServer/: main.cpp  server.cpp  server.h
Server talks to the client/SimpleQtClient/: client.cpp  client.h  main.cpp
Server talks to the client/SimpleQtServer/: CMakeLists.txt  server.cpp  server.h
Simple server client connection/SimpleQtClient/: CMakeLists.txt  main.cpp
Simple server client connection/SimpleQtServer/: server.cpp  server.h
